# halloween-motion-detector

./: .gitignore  AGENTS.md  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  config.example.toml  motion_detector.py  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.agents/summary/: architecture.md  codebase_info.md  components.md  data_models.md  dependencies.md  index.md  interfaces.md  review_notes.md  workflows.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
halloween_motion_detector/: __init__.py  __main__.py  audio.py  config.py  detector.py  halloween_motion_detector.py  video.py
halloween_motion_detector/mp3/: ZombieMoans.m4a
specs/1-modernization/: design.md  requirements.md  tasks.md
tests/: conftest.py  test_audio.py  test_config.py  test_detector.py  test_halloween_motion_detector.py  test_integration.py  test_video.py
